testsuite/tests/partial-sigs/should_fail/T11515.stderr

T11515.hs:7:20: error:
    • Found extra-constraints wildcard standing for ‘()’
      To use the inferred type, enable PartialTypeSignatures
    • In the type signature: foo :: (ShowSyn a, _) => a -> String
